bk_ida/gccida/g0/_cpp_lex_direct
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1339:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 * cpp_lex_direct( cpp_reader_0 *pfile) 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1339:31: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_token_0 * cpp_lex_direct( cpp_reader_0 *pfile) 
                              ^~~~~~~~~~~~
                              cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1341:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *cur_token; // rax 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1350:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // [rsp+48h] [rbp-18h] 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1351:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *result; // [rsp+50h] [rbp-10h] 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1583:13: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
else if ( ( sch_istable[( unsigned __int8)ce] & 4) != 0 ) 
            ^~~~~~~~~~~
            _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1586:40: error: expected expression
parse_number_0( pfile, ( cpp_string_0 *)&result->val, ce, 1); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1586:26: error: use of undeclared identifier 'cpp_string_0'
parse_number_0( pfile, ( cpp_string_0 *)&result->val, ce, 1); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1646:40: error: expected expression
parse_number_0( pfile, ( cpp_string_0 *)&result->val, c, 0); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/cpplex.c:1646:26: error: use of undeclared identifier 'cpp_string_0'
parse_number_0( pfile, ( cpp_string_0 *)&result->val, c, 0); 
                         ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/_cpp_lex_direct/src/obj/cpplex.o] Error 1
